--- a/common/build.gradle
+++ b/common/build.gradle
@@ -12,7 +12,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath 'com.android.tools.build:gradle:7.3.1'
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.8'
     }
 }
@@ -32,7 +32,7 @@ android {
     compileSdkVersion 31
     defaultConfig {
         minSdkVersion 31
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
     }
@@ -50,14 +50,14 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "com.android.support:support-v4:$android_support_version"
-    implementation "com.android.support:support-vector-drawable:$android_support_version"
-    implementation "com.android.support:appcompat-v7:$android_support_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    implementation "androidx.vectordrawable:vectordrawable:1.1.0"
+    implementation "androidx.appcompat:appcompat:1.0.1"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.protobuf:protobuf-lite:3.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
