--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        tools:targetApi="lollipop">
+        android:supportsRtl="true">
         <service
             android:name="com.abrenoch.hyperiongrabber.common.HyperionScreenService"
             android:foregroundServiceType="mediaProjection"
             android:exported="true"
-            android:launchMode="singleTask">
+            android:launchMode="singleTask"
+            android:permission="android.permission.FOREGROUND_SERVICE">
             <intent-filter>
                 <action android:name="com.abrenoch.hyperiongrabber.common.HyperionScreenService" />
                 <action android:name="com.abrenoch.hyperiongrabber.service.ACTION_START" />
