--- a/tv/build.gradle
+++ b/tv/build.gradle
@@ -11,7 +11,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath 'com.android.tools.build:gradle:7.3.1'
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.8'
     }
 }
@@ -48,12 +48,12 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(path: ':common')
 
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation "com.android.support:appcompat-v7:$android_support_version"
-    implementation "com.android.support:leanback-v17:$android_support_version"
-    implementation "com.android.support:preference-leanback-v17:$android_support_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
+    implementation "androidx.appcompat:appcompat:1.0.1"
+    implementation "androidx.leanback:leanback:1.0.0"
+    implementation "androidx.leanback:leanback-preference:1.0.0"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     implementation 'nl.dionsegijn:konfetti:1.1.2'
     // required for konfetti
