--- a/common/build.gradle
+++ b/common/build.gradle
@@ -12,8 +12,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
-        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.16'
+        classpath 'com.android.tools.build:gradle:8.7.2'
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.9.0'
     }
 }
 
@@ -46,6 +46,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
         sourceCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.abrenoch.hyperiongrabber.common'
 }
 
 dependencies {
