--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,10 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
+android.defaults.buildfeatures.buildconfig=true
 android.enableJetifier=true
+android.nonFinalResIds=false
+android.nonTransitiveRClass=false
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1920M \
 --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
